COM-854 Add endpoints for update and delete
