# api/handlers.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/labstack/echo"
 	log "github.com/sirupsen/logrus"
+	"gitlab.com/team-monitoring/comedian/model"
 )
 
 func (api *ComedianAPI) healthcheck(c echo.Context) error {
@@ -32,10 +33,42 @@ func (api *ComedianAPI) getBotByID(c echo.Context) error {
 		return c.JSON(http.StatusNotAcceptable, err)
 	}
 
-	bots, err := api.db.GetBotSettingsByID(id)
+	bot, err := api.db.GetBotSettingsByID(id)
 	if err != nil {
-		return c.JSON(http.StatusNotFound, bots)
+		return c.JSON(http.StatusNotFound, bot)
 	}
 
-	return c.JSON(http.StatusOK, bots)
+	return c.JSON(http.StatusOK, bot)
+}
+
+func (api *ComedianAPI) updateBotByID(c echo.Context) error {
+	log.Info("Update Bot by ID: ", c.Param("id"))
+	bot := &model.BotSettings{}
+
+	if err := c.Bind(bot); err != nil {
+		return c.JSON(http.StatusNotAcceptable, err)
+	}
+
+	res, err := api.db.UpdateBotSettings(*bot)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, err)
+	}
+
+	return c.JSON(http.StatusOK, res)
+}
+
+func (api *ComedianAPI) deleteBot(c echo.Context) error {
+	log.Info("Detele bot with ID: ", c.Param("id"))
+
+	id, err := strconv.ParseInt(c.Param("id"), 0, 64)
+	if err != nil {
+		return c.JSON(http.StatusNotAcceptable, err)
+	}
+
+	err = api.db.DeleteBotByID(id)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, err)
+	}
+
+	return c.JSON(http.StatusOK, "deleted")
 }
